# Doctor-Appointmen-System

./: CMakeLists.txt  README.md
DoctorAppointment/: Doctor.cpp  Doctor.h  DoctorAppointment.cpp  Medicine.cpp  Medicine.h  Message.cpp  Message.h  Patient.cpp  Patient.h  Person.cpp  Person.h
